# thought-leadership-crew

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: ollama_setup.md
knowledge/: user_preference.txt
src/thought_leadership_crew/: crew.py  main.py  output_classes.py
src/thought_leadership_crew/config/: agents.yaml  llm_config.py  tasks.yaml
thought_leadership_crew/src/thought_leadership_crew/: main.py
